--- a/.github/workflows/Build and upload.yaml
+++ b/.github/workflows/Build and upload.yaml
@@ -31,13 +31,13 @@ jobs:
           path: dist/
 
       - name: Upload to TestPyPI
-        uses: pypa/gh-action-pypi-publish@master
+        uses: pypa/gh-action-pypi-publish@unstable/v1
         with:
           password: ${{ secrets.TEST_PYPI_API_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
 
       - name: Upload to PyPI
         if: startsWith(github.ref, 'refs/tags')  # Only upload to PyPI on tag pushes
-        uses: pypa/gh-action-pypi-publish@master
+        uses: pypa/gh-action-pypi-publish@unstable/v1
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
