--- a/.github/workflows/Build and upload.yaml
+++ b/.github/workflows/Build and upload.yaml
@@ -31,7 +31,7 @@ jobs:
           path: dist/
 
       - name: Upload to TestPyPI
-        if: !startsWith(github.ref, 'refs/tags')  # Only upload to TestPyPI on non-tag pushes
+        if: "!startsWith(github.ref, 'refs/tags')"  # Only upload to TestPyPI on non-tag pushes
         uses: pypa/gh-action-pypi-publish@unstable/v1
         with:
           password: ${{ secrets.TEST_PYPI_API_TOKEN }}
