--- a/.github/workflows/Build and upload.yaml
+++ b/.github/workflows/Build and upload.yaml
@@ -7,8 +7,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repository with all history
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Fetch all history for tags
 
       - name: Set up Python
         uses: actions/setup-python@v2
