--- a/.github/workflows/Build and upload.yaml
+++ b/.github/workflows/Build and upload.yaml
@@ -7,10 +7,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository with all history
+      - name: Checkout repository
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # Fetch all history for tags
+
+      - name: Fetch all history and tags
+        run: git fetch --prune --unshallow --tags
 
       - name: Set up Python
         uses: actions/setup-python@v2
