--- a/.github/workflows/Build and upload.yaml
+++ b/.github/workflows/Build and upload.yaml
@@ -9,9 +9,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
-      - name: Fetch all history and tags
-        run: git fetch --prune --unshallow
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -21,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel twine build setuptools_scm versiontag
+          pip install setuptools wheel build setuptools-scm
 
       - name: Build package
         run: |
